# MotionSenseHRV4Flash

./: .gitignore  DOCKER.md  README.md  nrf5340dk_nrf5340_cpuapp.overlay
DataExtraction/: Usage.md  cpp_conversion.cpp  data_extraction.py  graph_generation.py
DataExtraction/filesystem_validation/: test_files_equality_comparison.cpp
MSenseDevice/: CMakeLists.txt  Dockerfile  HowToDevelop.md  Installation.md  Kconfig  changelist.txt  msense_ncs_v2.5.3.patch  nrf5340dk_nrf5340_cpuapp.overlay  pm_static.yml  prj.conf  qspi_nor_flash.c  spi_nand.c
MSenseDevice/child_image/: hci_rpmsg.conf  mcuboot.conf
MSenseDevice/dts/bindings/: senselab,nanddisk.yaml  senselab,qspinor.yaml  senselab,spinor.yaml  vnd,customflash.yaml
MSenseDevice/nor/: CMakeLists.txt  Kconfig  nor.overlay  pm_static.yml  prj.conf  prj_nor.conf
MSenseDevice/nor/child_image/: hci_rpmsg.conf
MSenseDevice/previous_code/: MSenseHRV2.overlay  batteryMonitor.c
MSenseDevice/src/: BLEService.c  BLEService.h  batteryMonitor.c  batteryMonitor.h  battery_service.h  batterymonitordt.c  ble_tf_ppg_preprocessing.c  ble_tf_ppg_preprocessing.h  common.h  filesystemlogging.c  imuSensor.c  imuSensor.h  main.c  orientation.c  ppgSensor.c  ppgSensor.h  zephyrfilesystem.c  zephyrfilesystem.h
MSenseDevice/src/drivers/: CMakeLists.txt  Kconfig  sample_flash_driver.c
MSenseDevice/src/drivers/dhara/: error.c
MSenseDevice/src/drivers/jdec_nor/: custom_qspi.c  custom_qspi.h  custom_qspi_nor.c  spi_nor.c
MSenseDevice/src/drivers/nand/: bad_page.c  bad_page.h  nand_disk.c  nand_disk.h  spi_nand.c  spi_nand.h
MSenseDevice/src/filesystem/: zephyrfilesystem.c  zephyrfilesystem.h
MSenseDevice/sysbuild/: mcuboot.conf  mcuboot.overlay
ZephrNrfOnDeviceApplication/: CMakeLists.txt  Kconfig  changelist.txt  nrf5340dk_nrf5340_cpuapp.overlay  old_overlay  pm_static.yml  prj.conf
ZephrNrfOnDeviceApplication/src/: BLEService.c  BLEService.h  batteryMonitor.c  imuSensor.c  imuSensor.h  main.c  output_handler.cc  ppgSensor.c  ppgSensor.h
ZephrNrfOnDeviceApplication/src/drivers/dhara/: nand.c  nand.h
ZephrNrfOnDeviceApplication/src/drivers/jdec_nor/: spi_nor.h
ZephrNrfOnDeviceApplication/src/filesystem/: zephyrfilesystem.c  zephyrfilesystem.h
